--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,3 +43,6 @@ jobs:
       - store_artifacts:
           path: junit-reports
           destination: junit-reports
+
+      - store_test_results:
+          path: junit-results
